--- a/mirgovorit/src/apps/frontend/templates/frontend/index.html
+++ b/mirgovorit/src/apps/frontend/templates/frontend/index.html
@@ -1,3 +1,4 @@
+<!-- your_template.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,13 +7,39 @@
     <title>Filtered Recipes</title>
     <style>
         body {
-            text-align: center;
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
         }
-        h1 {
+        header {
+            background-color: lightgray;
             padding: 15px;
+            text-align: center;
+            position: relative;
+        }
+        h1 {
+            margin: 0;
+            padding: 0;
+            display: inline-block;
+        }
+        .user-info {
+            position: absolute;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: black;
+        }
+        .login-logout-btn {
+            position: absolute;
+            right: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: gray;
+            color: black;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 30px;
+            cursor: pointer;
         }
         table {
             width: 50%;
@@ -26,8 +53,20 @@
     </style>
 </head>
 <body>
+<header>
+    {% if user.is_authenticated %}
+        <div class="user-info">{{ user.get_full_name }}</div>
+        <h1>Filtered Recipes</h1>
+        <form action="{{ logout }}" method="post" id="logout-form">
+            {% csrf_token %}
+            <button type="submit" class="login-logout-btn">Logout</button>
+        </form>
+    {% else %}
+        <h1>Filtered Recipes</h1>
+        <button class="login-logout-btn" onclick="location.href='{{ login }}'">Login</button>
+    {% endif %}
+</header>
 
-<h1>Filtered Recipes</h1>
 
 <table>
     <thead>
