added fixtures and wrote README.md

--- a/mirgovorit/src/apps/frontend/templates/frontend/homepage.html
+++ b/mirgovorit/src/apps/frontend/templates/frontend/homepage.html
@@ -87,6 +87,7 @@
             {% csrf_token %}
             {{ form.product }}
             <br>
+            <input type="hidden" name="unsafe" value="True" />
             <input type="hidden" name="func" value="show" />
             <button type="submit">Показать</button>
         </form>       
